--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 </head>
 <body>
     
-    <div><button id="dealButton" class="btn_visible">Deal the cards</button>
-    <br><button id="resetButton" class="btn_hidden">Restart</button></div>
+    <div>
+        <button id="dealButton" class="btn_visible">Deal the cards</button>
+        <button id="resetButton" class="btn_hidden">Restart</button>
+    </div>
+
+    <div>
+        <div><button id="choice_red">Red</button><button id="choice_black">Black</button></div>
+    </div>
     
     <button id="btn_card1" class="btn_card_style"><div id="card1" class="card_box"></div></button>
     <button id="btn_card2" class="btn_card_style"><div id="card2" class="card_box"></div></button>
