--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!--HERE I IMPORT MY OWN STYLESHEET TO OVERLAP BOOTSTRAPS STYLES AND CREATE MY OWN-->
     <link href="assets/css/styles.css" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -52,6 +51,7 @@
                 <div class="row justify-content-center">
                     <button id="btn_card1" class="btn_card_style">
                         <div id="card1" class="card_box"></div>
+                        <!--<div id="card_back1" class="card_box"></div>-->
                     </button>
                     <button id="btn_card2" class="btn_card_style">
                         <div id="card2" class="card_box"></div>
