--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="game_info">
                 <div class="row justify-content-center my-2">
                     <div class="col-4 controls-position">
-                        <button id="resetButton" class="btn btn-primary">Restart</button>
+                        <button id="resetButton" class="btn btn-primary">Try again!</button>
                     </div>
 
                     <div class="col-4 controls-position text-center">
@@ -111,6 +111,9 @@
         <div class="row">
             <div class="col-12 background-styling">
                 <div class="row justify-content-center">
+                    <button id="btn_card0" class="btn_card_style">
+                        <div id="card0" class="card_box"></div>
+                    </button>
                     <button id="btn_card1" class="btn_card_style">
                         <div id="card1" class="card_box"></div>
                     </button>
@@ -120,35 +123,32 @@
                     <button id="btn_card3" class="btn_card_style">
                         <div id="card3" class="card_box"></div>
                     </button>
-                    <button id="btn_card4" class="btn_card_style">
-                        <div id="card4" class="card_box"></div>
-                    </button>
                 </div>
 
                 <div class="row justify-content-center">
+                    <button id="btn_card4" class="btn_card_style">
+                        <div id="card4" class="card_box"></div>
+                    </button>
                     <button id="btn_card5" class="btn_card_style">
                         <div id="card5" class="card_box"></div>
                     </button>
                     <button id="btn_card6" class="btn_card_style">
                         <div id="card6" class="card_box"></div>
                     </button>
+                </div>
+
+                <div class="row justify-content-center">
                     <button id="btn_card7" class="btn_card_style">
                         <div id="card7" class="card_box"></div>
                     </button>
-                </div>
-
-                <div class="row justify-content-center">
                     <button id="btn_card8" class="btn_card_style">
                         <div id="card8" class="card_box"></div>
                     </button>
-                    <button id="btn_card9" class="btn_card_style">
-                        <div id="card9" class="card_box"></div>
-                    </button>
                 </div>
 
                 <div class="row justify-content-center">
-                    <button id="btn_card10" class="btn_card_style">
-                        <div id="card10" class="card_box"></div>
+                    <button id="btn_card9" class="btn_card_style">
+                        <div id="card9" class="card_box"></div>
                     </button>
                 </div>
             </div>
