--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="controls-spacing"></div>
-            <div class="row justify-content-center text-color">
+            <div id="intro_text" class="row justify-content-center text-color">
                 <div class="col-12 col-lg-6 position-absolute text-center">
                     <div class="row">
                         <h1>How to play Bussen!</h1>
