--- a/index.html
+++ b/index.html
@@ -107,42 +107,52 @@
         <div class="controls-spacing"></div>
         <div class="row">
             <div class="col-12 background-styling">
+                <div class="card-height-spacing"></div>
                 <div class="row justify-content-center">
                     <button id="btn_card0" class="btn_card_style">
                         <div id="card0" class="card_box"></div>
                     </button>
+                    <div class="card-width-spacing"></div>
                     <button id="btn_card1" class="btn_card_style">
                         <div id="card1" class="card_box"></div>
                     </button>
+                    <div class="card-width-spacing"></div>
                     <button id="btn_card2" class="btn_card_style">
                         <div id="card2" class="card_box"></div>
                     </button>
+                    <div class="card-width-spacing"></div>
                     <button id="btn_card3" class="btn_card_style">
                         <div id="card3" class="card_box"></div>
                     </button>
                 </div>
 
+                <div class="card-height-spacing"></div>
                 <div class="row justify-content-center">
                     <button id="btn_card4" class="btn_card_style">
                         <div id="card4" class="card_box"></div>
                     </button>
+                    <div class="card-width-spacing"></div>
                     <button id="btn_card5" class="btn_card_style">
                         <div id="card5" class="card_box"></div>
                     </button>
+                    <div class="card-width-spacing"></div>
                     <button id="btn_card6" class="btn_card_style">
                         <div id="card6" class="card_box"></div>
                     </button>
                 </div>
 
+                <div class="card-height-spacing"></div>
                 <div class="row justify-content-center">
                     <button id="btn_card7" class="btn_card_style">
                         <div id="card7" class="card_box"></div>
                     </button>
+                    <div class="card-width-spacing"></div>
                     <button id="btn_card8" class="btn_card_style">
                         <div id="card8" class="card_box"></div>
                     </button>
                 </div>
 
+                <div class="card-height-spacing"></div>
                 <div class="row justify-content-center">
                     <button id="btn_card9" class="btn_card_style">
                         <div id="card9" class="card_box"></div>
