--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <div class="container-fluid controls-background-settings fixed-top">
+        <div class="container-fluid menu-settings fixed-top">
             <div id="game_info">
                 <div class="row justify-content-center my-2">
                     <div class="col-4 controls-position">
@@ -42,7 +42,8 @@
                     <div id="warning_textfield" class="text-color"></div>
                 </div>
             </div>
-            <div class="controls-spacing"></div>
+        </div>
+        <div class="container-fluid intro-settings fixed-top">
             <div id="intro_text" class="row justify-content-center text-color">
                 <div class="col-12 col-lg-6 position-absolute text-center">
                     <div class="row">
@@ -104,7 +105,7 @@
     </header>
 
     <div class="container-fluid">
-        <div class="controls-spacing"></div>
+        <div class="menu-spacing"></div>
         <div class="row">
             <div class="col-12 background-styling">
                 <div class="card-height-spacing"></div>
@@ -176,8 +177,8 @@
 </body>
 
 <!--HERE I IMPORT JQUERY-->
-<script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
 <!--HERE I IMPORT BOOTSTRAPS JAVASCRIPT SOURCE: https://getbootstrap.com/docs/4.3/getting-started/download/-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
